user 아웃어댑터 테스트 작성 및 비즈니스 코드 리팩토링